Shiro实现初步接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.password=root
 
 mybatis.mapper-locations=mapper/*.xml
 mybatis.type-aliases-package=com.jtb.shiro.mapper
+
+## jsp ##
+##所有的页面都放在pages里
+spring.mvc.view.prefix=/pages/
+##所有的文件都是以.jsp结尾
+spring.mvc.view.suffix=.jsp
