--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8
@@ -5,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 mybatis.mapper-locations=mapper/*.xml
-mybatis.type-aliases-package=com.jtb.shiro.mapper
+mybatis.type-aliases-package=com.jtb.shiro.model
 
 ## jsp ##
 ##所有的页面都放在pages里
